<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_raytel_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enter_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_sign_up"
        android:textColor="@color/dark_blue_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_logo" />


    <LinearLayout
        android:id="@+id/l_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/box_background_color"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_account">

        <TextView
            android:id="@+id/prefix_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+998"
            android:textColor="@color/black"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:digits="0123456789- "
            android:hint="@string/text_phone_number"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_account" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/we_will_send_sms_code_to_phone"
        android:textColor="@color/dark_blue_color"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_code"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_get_code"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/l_phone"
        app:layout_constraintStart_toStartOf="@id/l_phone" />


    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        android:clickable="true"
        android:translationZ="10dp"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>