<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirm.PaymentConfirmFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_raytel_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_regular"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:text="@string/text_confirm_message" />


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_pay_money"
        android:textColor="@color/dark_blue_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_card_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_rect_12"
        android:backgroundTint="#99FAFD"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_description">


        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:layout_weight="0.9"
            android:fontFamily="@font/rubik_medium"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/ic_copy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8600 9860 6004 1313" />

        <ImageView
            android:id="@+id/ic_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="0.1"
            android:padding="8dp"
            android:src="@drawable/ic_copy_with_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_card_number"
            app:layout_constraintTop_toBottomOf="@id/tv_card_number"
            tools:text="Utemuradov Baxtiyar " />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintEnd_toEndOf="@id/l_card_info"
        app:layout_constraintStart_toStartOf="@id/l_card_info"
        app:layout_constraintTop_toBottomOf="@id/l_card_info" />


    <TextView
        android:id="@+id/tv_check_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/dark_blue_color"
        android:text="@string/to_confirm_payment_upload_check"
        app:layout_constraintEnd_toEndOf="@id/v_line"
        app:layout_constraintStart_toStartOf="@id/v_line"
        app:layout_constraintTop_toBottomOf="@id/v_line" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/rubik_regular"
        android:paddingHorizontal="32dp"
        android:text="@string/text_choose_photo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_check_confirm"
        app:layout_constraintTop_toBottomOf="@id/tv_check_confirm" />

    <TextView
        android:id="@+id/tv_file_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_photo_not_selected"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="@id/tv_check_confirm"
        app:layout_constraintTop_toTopOf="@id/btn_upload" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_finish"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/main_color"
        android:text="@string/text_finish"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/l_card_info"
        app:layout_constraintStart_toStartOf="@id/l_card_info" />


    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        android:clickable="true"
        android:translationZ="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
