<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo_raytel_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enter_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_sign_up"
        android:textColor="@color/dark_blue_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_logo" />

    <TextView
        android:id="@+id/tv_enter_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/enter_code_from_sms"
        android:textColor="@color/dark_blue_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_account" />


    <LinearLayout
        android:id="@+id/l_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_sms">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code_one"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_rect_8"
            android:backgroundTint="@color/box_background_color"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code_two"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_rect_8"
            android:backgroundTint="@color/box_background_color"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code_three"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_rect_8"
            android:backgroundTint="@color/box_background_color"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code_four"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_rect_8"
            android:backgroundTint="@color/box_background_color"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_code">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/after_30_seconds"
            android:textColor="@color/dark_blue_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_get_code_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:enabled="false"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/get_code_again_after"
            android:textColor="@color/purple_color"
            android:textSize="12sp" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/text_confirm"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        android:clickable="true"
        android:translationZ="10dp"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>