<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jgabrielfreitas.core.BlurImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:rotation="180"
            android:src="@drawable/gradient_black_transparent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/gradient_black_transparent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_new"
            android:layout_width="116dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_new"
            android:gravity="center"
            android:letterSpacing="0.3"
            android:text="@string/text_new"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_new"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_new"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#F44336" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.082" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="116dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_border"
            android:backgroundTint="@color/main_bg_color"
            android:ellipsize="marquee"
            android:gravity="center"
            android:paddingStart="24dp"
            android:paddingEnd="12dp"
            android:text="@string/raytel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/guideline_logo"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_raytel_png"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_logo"
            app:layout_constraintStart_toStartOf="@id/guideline_logo"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_screenshot"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/text_screenshot"
            android:textAllCaps="false"
            android:textColor="@color/main_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:strokeColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lock_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A8000000">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_lock"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_lock_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/text_lock_warning"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_lock"
            tools:ignore="SpUsage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="96dp"
            android:backgroundTint="@color/main_color"
            android:paddingHorizontal="36dp"
            android:text="@string/text_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_sign_in"
            android:textColor="#2196F3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_online"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_border"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_online_indicator"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:src="@drawable/indicator" />

        <TextView
            android:id="@+id/tv_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/text_online"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
